--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
-        <h1>Sample scripts and things related to vtrace/vdb</h1>
+        <h1>scripts related to vtrace/vdb</h1>
 
 <hr><h2>command_line</h2>
 
